--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="global.css">
 </head>
 <body>
-    
-
+    <header>
+        
+    </header>
 
 
     <script src="script.js"></script>
