--- a/index.html
+++ b/index.html
@@ -1,108 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="global.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Registration Form</title>
+  <link rel="stylesheet" href="global.css" />
 </head>
 <body>
-    
-    <header>
+  <header class="header">
+    <div class="header-content">
+      <div class="logo">
+        <div class="square"></div>
+        <div class="text">
+          <h2>EDUCATION.</h2>
+          <p>SCHOOL OF MUSIC AND ART</p>
+        </div>
+      </div>
+    </div>
+  </header>
 
+  <main class="container">
+    <h1>Registration <span>Form</span></h1>
+    <p class="desc">
+      This space is where you can share information on the section, such as:
+      topic, discussion points, goals and activities.
+    </p>
 
-    </header>
+    <form>
+      <!-- PERSONAL INFORMATION -->
+      <div class="form-section">
+        <div class="section-header">
+          <h3>PERSONAL INFORMATION</h3>
+          <div class="date-registration">
+            <label for="reg-date">DATE OF REGISTRATION</label>
+            <input type="date" id="reg-date" />
+          </div>
+        </div>
 
-   
-    <main>
-    <form action="#" method="post">
-        <section>
-        <h2>Personal Information</h2>
+        <div class="two-col">
+          <div class="col">
+            <label>Full Name:</label><input type="text" />
+            <label>Nickname:</label><input type="text" />
+            <label>Date of Birth:</label><input type="date" />
+            <label>Email:</label><input type="email" />
+            <label>Gender:</label>
+            <div class="gender">
+              <label><input type="radio" name="gender" /> Male</label>
+              <label><input type="radio" name="gender" /> Female</label>
+            </div>
+            <label>Country:</label><input type="text" />
+            <label>National ID No:</label><input type="text" />
+            <label>Phone:</label><input type="tel" />
+          </div>
 
-        <label for="full-name">Full Name:</label>
-        <input type="text" id="full-name" name="full-name"><br>
+          <div class="col">
+            <label>Place of Birth:</label><input type="text" />
+            <label>Nationality:</label><input type="text" />
+            <label>Domicile:</label><input type="text" />
+            <label>CP Domicile:</label><input type="text" />
+            <label>Marital Status:</label><input type="text" />
+            <label>Start Time:</label><input type="time" />
+            <label>Post Code:</label><input type="text" />
+          </div>
+        </div>
+      </div>
 
-        <label for="nickname">Nickname:</label>
-        <input type="text" id="nickname" name="nickname">
+      <!-- ADDRESS -->
+      <div class="form-section">
+        <h3>ADDRESS</h3>
+        <div class="two-col">
+          <div class="col">
+            <label>Present Address:</label><input type="text" />
+            <label>The City:</label><input type="text" />
+            <label>Zip Code:</label><input type="text" />
+          </div>
+          <div class="col">
+            <label>Present State:</label><input type="text" />
+            <label>Student Trustee:</label><input type="text" />
+          </div>
+        </div>
+      </div>
 
-        <label for="place-of-birth">Place of Birth:</label>
-        <input type="text" id="place-of-birth" name="place-of-birth"><br>
-
-        <label for="date-of-birth">Date of Birth:</label>
-        <input type="date" id="date-of-birth" name="date-of-birth">
-
-        <label for="nationality">Nationality:</label>
-        <input type="text" id="nationality" name="nationality"><br>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email">
-
-        <label for="domicile">Domicile:</label>
-        <input type="text" id="domicile" name="domicile"><br>
-
-        <label>Gender:</label>
-        <input type="radio" id="male" name="gender" value="male">
-        <label for="male">Male</label>
-        <input type="radio" id="female" name="gender" value="female">
-        <label for="female">Female</label><br>
-
-        <label for="cp-domicile">CP Domicile:</label>
-        <input type="text" id="cp-domicile" name="cp-domicile">
-
-        <label for="marital-status">Marital Status:</label>
-        <input type="text" id="marital-status" name="marital-status"><br>
-
-        <label for="start-time">Start Time:</label>
-        <input type="time" id="start-time" name="start-time">
-
-        <label for="country">Country:</label>
-        <input type="text" id="country" name="country"><br>
-
-        <label for="post-code">Post Code:</label>
-        <input type="text" id="post-code" name="post-code">
-
-        <label for="national-id">National ID No:</label>
-        <input type="text" id="national-id" name="national-id"><br>
-
-        <label for="phone">Phone:</label>
-        <input type="tel" id="phone" name="phone">
-        </section>
-
-        <section>
-        <h2>Address</h2>
-
-        <label for="present-address">Present Address:</label>
-        <input type="text" id="present-address" name="present-address"><br>
-
-        <label for="city">The City:</label>
-        <input type="text" id="city" name="city">
-
-        <label for="present-state">Present State:</label>
-        <input type="text" id="present-state" name="present-state"><br>
-
-        <label for="zip-code">Zip Code:</label>
-        <input type="text" id="zip-code" name="zip-code">
-
-        <label for="student-trustee">Student Trustee:</label>
-        <input type="text" id="student-trustee" name="student-trustee">
-        </section>
-
-        <section>
-        <label for="register-signature">Register Signature:</label>
-        <input type="text" id="register-signature" name="register-signature">
-
-        <label for="officer-signature">Officer Signature:</label>
-        <input type="text" id="officer-signature" name="officer-signature">
-        </section>
+      <!-- SIGNATURES -->
+      <div class="signatures">
+        <div class="sig-box">
+          <div class="signature-line"></div>
+          <label>Register Signature</label>
+        </div>
+        <div class="sig-box right">
+          <div class="signature-line"></div>
+          <label>Officer Signature</label>
+        </div>
+      </div>
     </form>
-    </main>
 
-
-    <footer>
-        
+    <footer class="footer">
+      <div class="school-info">
+        <h3>ADDRESS SCHOOL:</h3>
+        <p>A: 123 Anywhere St., Any City, ST 12345</p>
+        <p>
+          P: +123-456-7890 &nbsp;&nbsp; E: hello@reallygreatsite.com
+        </p>
+      </div>
+      <div class="thankyou">
+        <h3>THANK YOU <span>FOR REGISTRATION</span></h3>
+        <p>
+          Write your instructions here. You can add details or examples to help
+          your reader along!
+        </p>
+      </div>
     </footer>
-
-    <script src="script.js"></script>
-
+  </main>
 </body>
 </html>
